apps/tts/service-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tts-web
  namespace: tts
  labels:
    app.kubernetes.io/name: tts-web
    app.kubernetes.io/part-of: tts
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tts-web
  ports:
    - name: http
      port: 80
      targetPort: http
